--- a/10_Laboratorios/Dijkstra/Dijkstra.ipynb
+++ b/10_Laboratorios/Dijkstra/Dijkstra.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "También es llamdo algoritmo de caminos mínimos, como su nombre lo dice permite encontrar la ruta más corta entre dos puntos partiendo desde un punto de origen preestablecido."
+    "También es llamado algoritmo de caminos mínimos, como su nombre lo dice permite encontrar la ruta más corta entre dos puntos partiendo desde un punto de origen preestablecido."
    ]
   },
   {
