--- a/10_Laboratorios/Dijkstra/Practicas/Practica_1/Practica_Dijkstra_1.ipynb
+++ b/10_Laboratorios/Dijkstra/Practicas/Practica_1/Practica_Dijkstra_1.ipynb
@@ -15,31 +15,29 @@
    "source": [
     "# **Práctica 1:** Rutas de evacuación <a id='ejemplo'></a>\n",
     "\n",
-    "Como parte de la planeación del protocolo de evacuación el área de seguridad y salud en trabajo de la empresa Bayarwa.SAS necesita encontrar la ruta mas corta a los puntos de encuentro y decidir las rutas de evacuación.\n",
+    "Como parte de la planeación del protocolo de evacuación, el área de seguridad y salud en trabajo de la empresa Bayarwa.SAS necesita encontrar la ruta más corta a los puntos de encuentro y decidir las rutas de evacuación. \n",
     "\n",
-    "Para esto han dividido los espacios de la empresa en siete bloques y a su vez an subdividido estos bloques para representar las diferentar áreas. El listado de bloques se muestra junto con el grafo de la red la de empresa.\n",
+    "Para esto han dividido los espacios de la empresa en siete bloques y subdividido estos para representar las diferentes áreas de trabajo. También se midieron la distancia de los recorridos que hay entre cada una de las secciones y las secciones conjuntas, la cules fueron guardadas en los archivos de la carpeta Ruta. Por ejemplo, [A1_X1.txt](Ruta/A1_X1.txt) y fueron representadas en el siguiente grafo.\n",
     "\n",
-    "A continuación se midieron la distancia de los recorridos que hay entre cada una de las secciones y las secciones conjuntas, la cules fueron guardadas en los archivos de la carpeta Ruta, por ejemplo, [A1_X1.txt](Ruta/A1_X1.txt) y fueron respresentadas en el siguiente grafo.\n",
-    "\n",
-    "![grafo_bloques.png](grafo_bloques.png)"
+    "![grafo_bloques.png](grafo_bloques.png)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La primera impresión que tuvo la coordinadora de EHS sobre las rutas es la siguiente realción entre bloques y puntos de encuentro:\n",
+    "La primera impresión que tuvo la coordinadora de EHS sobre las rutas fue que lo más razonable era emparejar bloques con los puntos de encuentro de la siguiente manera:\n",
     "- Los bloques A y B con el punto de encuentro X1.\n",
     "- El bloque C con el punto de encuentro X2. \n",
     "- Los bloques D y E con el punto de encuentro X1.\n",
     "- El bloque F con el punto de encuentro X4.\n",
     "- El bloque G con el punto de encuentro X3.\n",
     "\n",
-    "Para corroborar el punto anteior, calcula la ruta mas corta de cada sección a cada punto de encuentro empleando el [programa Dijkstra](#prog \"Ir al programa\") con el cual obtendrán el archivo Resultados_Si_Xj.txt con la ruta mas corta para cada sección. \n",
+    "Para corroborar su primera impresión, calcula la ruta más corta de cada sección a cada punto de encuentro empleando el [programa Dijkstra](#prog \"Ir al programa\") con el cual obtendrán el archivo Resultados_Si_Xj.txt con la ruta más corta para cada sección. \n",
     "\n",
     "Donde: \n",
     "- S= Sección\n",
-    "- i= Número de la seccción\n",
+    "- i= Número de la sección\n",
     "- X= Punto de encuentro\n",
     "- j= Número del punto de encuentro."
    ]
@@ -61,7 +59,7 @@
     "**Preguntas guía**\n",
     "- ¿La coordinadora de EHS estaba en lo correcto?\n",
     "- ¿Alguna sección del bloque B debería ir al punto de encuentro X2?\n",
-    "- ¿Como deberian estar organizados lo bloques, para que cada sección sepa cual es su punto de encuentro?"
+    "- ¿Cómo deberían estar organizados lo bloques para que cada sección sepa cuál es su punto de encuentro?"
    ]
   },
   {
@@ -90,7 +88,7 @@
     "3. Ejecutar el programa con la siguiente celda.\n",
     "\n",
     "**Notas:** \n",
-    "- Como son 96 archivos de lectura el programa demora unos segundos en correr, asegurese de que halla corrido completamente antes de abrir los archivos resultados.\n",
+    "- Como son 96 archivos de lectura el programa demora unos segundos en correr, asegúrese de que haya corrido completamente antes de abrir los archivos de resultados.\n",
     "- La carpeta de resultados se creará en la carpeta Ruta."
    ]
   },
