--- a/10_Laboratorios/Dijkstra/Programa/Analisis.ipynb
+++ b/10_Laboratorios/Dijkstra/Programa/Analisis.ipynb
@@ -16,7 +16,7 @@
     "# **Análisis - Dijkstra**\n",
     "\n",
     "- ### Objetivo\n",
-    "Hacer un programa que al ingresar un archivo con la matriz de distancia entre nodos devuelva la ruta mas corta entre los puntos indicados.\n",
+    "Hacer un programa que al ingresar un archivo con la matriz de distancia entre nodos devuelva la ruta más corta entre los puntos indicados.\n",
     "\n",
     "\n",
     "- ### Entradas\n",
@@ -25,15 +25,15 @@
     "- ### Salidas\n",
     "    **0. Carpeta Resultados:** Carpeta en la misma ubicación del programa llamada \"Resultados\" para almacenar los resultados del programa.   \n",
     "    \n",
-    "    **1. Resultados.xlsx:** Archivos de excel con la lista de conexiones de la ruta más corta entre los puntos indicados, cada una con con su respectiva distacia, y a parte la distancia total de toda la ruta.\n",
+    "    **1. Resultados.xlsx:** Archivos de Excel con las conexiones de la ruta más corta entre los puntos indicados, cada una con su respectiva distancia. A parte debe tener la distancia total de toda la ruta.\n",
     "    \n",
     "- ### Algoritmo  \n",
     "    1. Pedir y leer archivo con la matriz de distancias.     \n",
     "    2. Buscar y almacenar las conexiones de la ruta:    \n",
     "        Mientras el nodo de llegada no esté resuelto:     \n",
-    "        2.1.Identificar nodos candidatos.       \n",
+    "        2.1. Identificar nodos candidatos.       \n",
     "        2.2. Escoger nodo más cercando desde el punto de origen.       \n",
-    "        2.3. Atualizar datos.     \n",
+    "        2.3. Actualizar datos.     \n",
     "    3. Reconstruir ruta.     \n",
     "    4. Crear y guardar el archivo.xlsx con los resultados."
    ]
