--- a/6_Funciones/6_Funciones.ipynb
+++ b/6_Funciones/6_Funciones.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 6. Funciones <a id='6_Funciones'></a>"
    ]
   },
@@ -11,7 +20,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "### [6.1. Declaración](#6.1_Declaracion)   \n",
     ">[6.1.1. Tipos de Declarción](#6.1.1_Tipos_de_Declaracion)      \n",
     "[6.1.2. Funcion Lambda](#6.1.2_Funcion_Lambda)      \n",
@@ -41,7 +49,7 @@
    "metadata": {},
    "source": [
     "## **6.1. Declaración** <a id='6.1_Declaracion'></a>  \n",
-    "Para declarar una función en Python se ha uso de la palabra de reservada `def` seguida del nombre y los argumentos entre paréntesis, al igual que con otras estructuras los dos puntos indican que las instrucciones siguientes que estén indentadas hacen parte de la función, por último, se emplea la palabra `return` para indicar la salida de esta.\n",
+    "Para declarar una función en Python se hace uso de la palabra de reservada `def` seguida del nombre y los argumentos entre paréntesis. Al igual que con otras estructuras los dos puntos indican que las instrucciones indentadas siguientes hacen parte de la función. Por último, se emplea la palabra `return` para indicar la salida de esta.\n",
     "\n",
     "~~~python\n",
     "def nombre_funcion(argumento_1, ..., argumento_n):\n",
@@ -59,9 +67,9 @@
    "metadata": {},
    "source": [
     "## 6.1.1. Tipos de Declaración <a id='6.1.1_Tipos_de_Declaracion'></a>   \n",
-    "Las funciones pueden ser clasificadas según la existencia de sus entradas y salidas, debido a que tanto los argumentos como la el retorno son opcionales. A continuación, se mostrarán los cuatro tipos de declaraciones.\n",
+    "Las funciones pueden ser clasificadas según sus entradas y salidas, debido a que tanto los argumentos como la el retorno son opcionales. A continuación, se mostrarán los cuatro tipos de declaraciones.\n",
     "\n",
-    "- **Función completa:** Es la que comparte un mayor parecido al concepto matemático de función, debido a que tiene unas entradas (argumentos), las transforma (con las indicaciones) y devuelve un resultado (salida), normalmente este resultado luego será usado en el código por lo cual se guarda en una variable. Este tipo de declaración se usa por ejemplo en las funciones de lectura y almacenamiento de datos y en las funciones de los módulos.\n",
+    "- **Función completa:** Es la que comparte un mayor parecido al concepto matemático de función, debido a que tiene unas entradas (argumentos), las transforma (con las indicaciones) y devuelve un resultado (salida). Normalmente este resultado luego será usado en el código por lo cual se guarda en una variable. Este tipo de declaración se usa por ejemplo en las funciones de lectura y almacenamiento de datos y en las funciones de los módulos.\n",
     "\n",
     "~~~python\n",
     "# Declaración\n",
@@ -96,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Función sin salidas:** Esta función toma los argumentos de entrada y realiza una transformación de estas pero no devuelve ningún objeto, normalmente es empleada para mostrar objetos o guardar archivos.\n",
+    "- **Función sin salidas:** Esta función toma los argumentos de entrada y realiza una transformación de estas, pero no devuelve ningún objeto. Normalmente es empleada para mostrar objetos o guardar archivos.\n",
     "\n",
     "~~~python\n",
     "# Declaración\n",
@@ -130,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Función sin entradas:** Este tipo de función en lugar tomar sus entrada con los argumentos utiliza variables globales (variables que ya existen en código donde se va a usar la función), o puede pedir directamente las entradas al usuario con `input`, al igual que una función completa su salida puede ser guardada en una variable aparte para ser utilizada posteriormente. Algunas funciones de validación usan esta forma de declaración.\n",
+    "- **Función sin entradas:** Este tipo de función en lugar tomar sus entrada con los argumentos utiliza variables globales (variables que ya existen en código donde se va a usar la función), o puede pedir directamente las entradas al usuario con `input`. Al igual que una función completa su salida puede ser guardada en una variable aparte para ser utilizada posteriormente. Algunas funciones de validación usan esta forma de declaración.\n",
     "\n",
     "**La función usando variables globales sería así:**\n",
     "    \n",
@@ -201,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- En el ejemplo anterior las variables 'x' y 'y' tienen que devolverse como salida y almacenarse en las variables num_1 y num_2 porque son variables locales de la función, por lo cual, no existen en otra parte del código y son utilizadas fuera de la función al correr el código mostrará NameError. <a id='Min-eje_Varaibles_Locales'></a>\n",
+    "- En el ejemplo anterior las variables 'x' y 'y' tienen que devolverse como salida y almacenarse en las variables num_1 y num_2 porque son variables locales de la función, así que no existen en otra parte del código y si son utilizadas fuera de la función al correr el código mostrará NameError. <a id='Min-eje_Varaibles_Locales'></a>\n",
     " \n",
     "~~~python\n",
     "# Mini_Ejemplo: Variables locales\n",
@@ -228,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Función sin entradas ni salidas:** Esta tipo de declaración es una mezcla de las dos anteriores, ya que, sus entradas la pide directamente al usuario o usa variables globales y sus salidas solo pueden mostradas o guardadas en un archivo. La función de este tipo más conocida es la función del programa principal [main( )](../2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2.4.2.3_Main-Program \"Ir a la descripción de una función main()\").\n",
+    "- **Función sin entradas ni salidas:** Este tipo de declaración sus entradas las pide directamente al usuario o usa variables globales y sus salidas solo pueden ser mostradas o guardadas en un archivo. La función de este tipo más conocida es la del programa principal [main( )](../2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2.4.2.3_Main-Program \"Ir a la descripción de una función main()\").\n",
     "\n",
     "\n",
     "~~~python\n",
@@ -265,6 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Lambda'></a>    \n",
     "## 6.1.2. Función Lambda <a id='6.1.2_Funcion_Lambda'></a>    "
    ]
   },
@@ -316,7 +325,7 @@
    "source": [
     "## 6.1.3. Documentación <a id='6.1.3_Documentacion'></a>  \n",
     "\n",
-    "Documentar una función es importante para facilitar la lectura de código y al momento de crear y utilizar funciones de [módulos propios](../9_Modulos/9_Modulos.ipynb#xxxx \"Ir al apartado de módulos propios\"). Para hacerlo se debe escribir en la primera línea de la función una descripción de lo que hace, las entradas que requiere y las salidas regresa, haciendo uso de las comillas simples, dobles o triples, dependiendo de qué tan grande sea la descripción.\n",
+    "Documentar una función es importante para facilitar la lectura de código y al momento de crear y utilizar funciones de [módulos propios](../9_Modulos/9_Modulos_y_Paquetes.ipynb \"Ir al capítulo 9. Módulos y Paqutes\"). Para hacerlo se debe escribir en la primera línea de la función y entre comillas triples una descripción de lo que hace, las entradas que requiere y las salidas regresa.\n",
     "\n",
     "Como se vio en capítulos anteriores para ver la documentación de un objeto se usa la función `help`.\n",
     "\n",
@@ -346,7 +355,7 @@
    "metadata": {},
    "source": [
     "## **6.2. Argumentos** <a id='6.2_Argumentos'></a> \n",
-    "Una función puede tener dos tipos de argumentos: obligatorios y opcionales. A continuación, se mostrarán las características de cada uno.\n",
+    "Una función puede tener dos tipos de argumentos, obligatorios y opcionales. A continuación, se mostrarán las características de cada uno.\n",
     "\n",
     "##  6.2.1. Argumentos Obligatorios <a id='6.2.1_Argumentos_Obligatorios'></a>\n",
     "\n",
@@ -450,11 +459,9 @@
    "source": [
     "##  6.2.2. Argumentos Opcionales <a id='6.2.2_Argumentos_Opcionales'></a>\n",
     "\n",
-    "Son argumentos que pueden ser inicializados o no al usar la función, porque se les asignó un valor predeterminado al momento de declarar la función y si no son indicados la función operará con estos valores. \n",
+    "Son argumentos que pueden ser inicializados o no al usar la función, porque se les asignó un valor predeterminado al momento de declarar la función y si no son indicados la función operará con estos valores. Si la función tiene los dos tipos de argumentos, los obligatorios siempre deben ir primero que los opcionales. Este tipo de argumentos se pueden inicializar en un orden diferente al declarado si se inicializa como una variable.\n",
     "\n",
-    "Si la función tiene los dos tipos de argumentos, los obligatorios siempre deben ir primero que los opcionales, además estos últimos, aunque tienen la característica de que se pueden inicializar según su posición también se puede hacer por asignación directa con su nombre lo que permite una inicialización diferente al orden preestablecido.\n",
-    "\n",
-    "En el siguiente Mini_Ejemplo los argumento menor, n y menor son opcionales. <a id='Min-eje_Argumentos_Opcionales_1'></a>\n",
+    "En el siguiente Mini_Ejemplo los argumentos n, menor y nd son opcionales. <a id='Min-eje_Argumentos_Opcionales_1'></a>\n",
     " \n",
     "~~~python\n",
     "# Mini_Ejemplo: Argumentos Opcionales 1\n",
@@ -535,9 +542,9 @@
     "<a id='Recursivas'></a> \n",
     "## **6.3. Funciones Recursivas** <a id='6.3_Funciones_Recursivas'></a>  \n",
     "\n",
-    "Las funciones recursivas son las que se utilizan a si mismas, funcionando como un estructura de repetición, sin embargo, se debe poner especial atención en el diseño para que deje de ejecutarse cuando sea necesario, de lo contrario, el programa podría entrar en [bucle infinito](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2.2.3_Bucles-Infinitos \"Ir al apartado 4.2.2.3. Bucles Infinitos\") como sucede con el ciclo while.\n",
+    "Las funciones recursivas son las que se utilizan a sí mismas, funcionando como una estructura de repetición. Se debe poner especial atención en el diseño para que deje de ejecutarse cuando sea necesario, de lo contrario, el programa podría entrar en [bucle infinito](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#BuclesInfinitos \"Ir al apartado 4.2.2.3. Bucles Infinitos\") como sucede con el ciclo while.\n",
     "\n",
-    "A continuación se muestra una función recursiva para calcular el n_avo Fibonacci solicitado por el usuario, como se vio en el [Mini_Ejemplo](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Min-eje_Acumulador \"Ir al Mini_Ejemplo del capítulo 4\") de la Sucesión de Fibonacci del capítulo 4. <a id='Min-eje_Funcion_Recursiva'></a>\n",
+    "A continuación se muestra una función recursiva para calcular el n_avo Fibonacci inidcado por el usuario al igual que en el [Mini_Ejemplo](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Min-eje_Acumulador \"Ir al Mini_Ejemplo del capítulo 4\") de la Sucesión de Fibonacci del capítulo 4. <a id='Min-eje_Funcion_Recursiva'></a>\n",
     " \n",
     "~~~python\n",
     "# Mini_Ejemplo: Función Recursiva\n",
@@ -760,40 +767,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Validación de Rangos** <a id='Min-eje_V_Rangos'></a>\n",
+    "## **6.4. Validaciones** <a id='6.4_Validaciones'></a> \n",
+    "Las validaciones son funciones que ayudan a que el programa detectar errores potenciales en el momento en el que usuario ingrese los datos, asegurándose que el ingreso sea correcto para el desarrollo normal del programa.\n",
     "\n",
-    "Como se ve en siguiente ejemplo, para lanzar una excepción del sistema cuando cumplen ciertas condiciones se usa la palabra reservada `raise`, indicando el nombre de la excepción y si se requiere entre paréntesis se puede poner un mensaje, indicando el error, para que se muestre en caso de que la excepción no sea capturada por un bloque de código.\n",
+    "Antes de ver como es la estructura general de una función de validación se deben conocer las excepciones, las cuales se explicarán a continuación.\n",
+    "\n",
+    "## 6.4.1. Excepciones <a id='6.4.1_Excepciones'></a> \n",
+    "\n",
+    "Las excepciones son una herramienta de Python para detectar algunos errores. Por ejemplo, cuando un bloque de código detecta un error lanza una excepción asociada a este y espera a que otro bloque la capture y el maneje, si este bloque no existe el programa deja de ejecutarse y muestra un mensaje de error con la excepción lanzada.\n",
+    "\n",
+    "Hay excepciones que tienen que ver con la forma de escribir código, como **SintaxisError** o **IndentationError** que tiene que ver más con el lenguaje de programación y errores del desarrollador, por lo cual no se van a tratar a fondo en esta guía.\n",
+    "\n",
+    "A continuación, hay una lista de las excepciones más comunes con las que se puede encontrar desarrollando esta guía, una breve descripción de cuando son lanzadas y algunos ejemplos.\n",
+    "\n",
+    "- **AssertionError:** Es lanzado cuando se utiliza assert y la expresión lógica que evalúa arroja False. \n",
     "\n",
     "~~~python\n",
-    "# Min_Ejemplo: Validación de Rangos\n",
+    "assert 1==\"Gatos\" | assert \"4.5\".isnumeric() | assert 10 in (9,8,3,2)\n",
     "\n",
-    "def v_rango(mensaje,minimo,maximo):\n",
-    "    \"Pide un número dentro de un rango según el mensaje indicado, hasta que el valor ingresado sea válido\"\n",
-    "    \n",
-    "    lineas=(\"\\n------------------------------------------------------------------\\n\")\n",
+    "~~~\n",
+    "\n",
+    "- **AttributeError:** Se presenta cuando se usa un método que no le pertenece a un objeto.\n",
+    "\n",
+    "~~~python\n",
+    "(4,7,8.1,\"Perros\").append(\"Laura\") | [\"Luis\",\"Lorena\",\"Lola\",\"Lucas\"].isalpha() | {\"Color\":\"Negro\",\"Opacidad\":0.3}.sort()\n",
+    "~~~\n",
+    "\n",
+    "- **IndexError:** Como se vio en el [capítulo 4](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Min-eje_Error-de-Indexacion), este error se da porque se utiliza un índice que no existe en un iterable, es decir, un índice mayor o igual a tamaño de este.\n",
+    "\n",
+    "~~~python\n",
+    "tupla= (4,7,8.1,\"Perros\")\n",
+    "\n",
+    "tupla[len(tupla)] | tupla[11] | tupla[-6] |\n",
+    "~~~\n",
+    "\n",
+    "- **ImportError:** Ocurre cuando se importa un módulo que no existe o que no se ha instalado.\n",
+    "\n",
+    "~~~python\n",
+    "import NUMPY | import stadistics | import plt |\n",
+    "~~~\n",
+    "\n",
+    "- **KeyError:** Se muestra cuando se intenta acceder a un elemento de un diccionario con una calve que no existe.\n",
+    "\n",
+    "~~~python\n",
+    "diccionario={\"Color\":\"Negro\",\"Opacidad\":0.3}\n",
+    "\n",
+    "diccionario[\"opacidad\"] | diccionario[\"cantidad\"] | diccionario[\"relleno\"] \n",
+    "~~~\n",
+    "\n",
+    "- **NameError:** Aparece cuando se utiliza un objeto que no existe o variable local fuera de su bloque como se vio en el [Mini_Ejemplo Variables Locales](#Min-eje_Varaibles_Locales \"Ir al Mini_Ejemplo\") del apartado 6.1.1.\n",
+    "\n",
+    "~~~python\n",
+    "c=100+a | len(l) | f_fantasma(98) | diccionario={\"Color\":Negro,\"Opacidad\":0.3}\n",
+    "~~~\n",
+    "- **TypeError:** Es mostrado cuando el tipo de objeto empelado en una función o en una operación no es compatible con esta, como se mostró en el [Mini_Ejemplo](#Min-eje_O_I_de_Argumentos \"Ir al Mini_Ejemplo\") del apartado anterior 6.2.1.\n",
+    "\n",
+    "~~~python\n",
+    "len(9) | \"Animales\"/2 | [2,3]-[4,3] | range(4.5) | float(3,4) | sorted([1,3,9,\"cadena\",\"c\"])\n",
+    "~~~\n",
+    "- **VlaueError:** Es mostrado cuando el valor del objeto usado en una función o en una operación no es válido a pesar de que su tipo si lo sea. \n",
+    "\n",
+    "~~~python\n",
+    "int(\"2.9\") | float(\"3,4\") | float(\"cadena\") | \n",
+    "~~~\n",
+    "- **ZeroDivisionError:** Se genera cuando se divide un número entre 0.\n",
+    "\n",
+    "~~~python\n",
+    "67/0 | 0.000438/0 |\n",
+    "~~~\n",
+    "\n",
+    "\n",
+    "## 6.4.2. Validación de Entradas <a id='6.4.2_Validacion_de_entradas'></a> \n",
+    "\n",
+    "La estructura básica de una función de validación de entradas es:\n",
+    "\n",
+    "~~~python\n",
+    "def validacion ():\n",
+    "    # Intentar ejecutar el bloque que puede generar un error\n",
     "    try:\n",
-    "        num=input(mensaje)\n",
-    "        num=float(num)\n",
-    "        try:    \n",
-    "            if not minimo<=num<=maximo:\n",
-    "                raise ValueError() \n",
-    "            print(\"\\nEl valor ingresado es correcto, muchas gracias.\")\n",
-    "\n",
-    "        except(ValueError):\n",
-    "            print(lineas+\"Recuerde ingresar un valor dentro del rango indicado.\"+lineas)\n",
+    "        Instrucciones que pueden generar un error\n",
+    "        ...\n",
+    "        return salidas\n",
     "    \n",
-    "            return v_rango(mensaje,minimo,maximo)\n",
-    "        \n",
+    "    # Verificar si ha lanzado una excepción\n",
+    "    except (excepción_1, excepción_2):\n",
+    "        Instrucciones si se lanzó una excepción\n",
+    "        ...\n",
+    "        validacion()\n",
+    "~~~\n",
+    "\n",
+    "Si no se tiene claro que excepción puede arrojar el bloque, entonces se utiliza la palabra reservada `exception` para cubrir todas las excepciones estándar de Python.\n",
+    "\n",
+    "A continuación, se muestran algunos ejemplos de validación de entradas.\n",
+    "\n",
+    "- **Validación Números Enteros** <a id='Min-eje_V_Numeros_Enteros'></a>\n",
+    "\n",
+    "~~~python\n",
+    "# Min_Ejemplo: Validación Números Enteros\n",
+    "\n",
+    "def v_num_entero(mensaje):\n",
+    "    \"Pide un número entero mostrando el mensaje indicado, hasta que el valor ingresado sea válido\"\n",
+    "    \n",
+    "    try:\n",
+    "        num=int(input(mensaje))\n",
+    "        print(\"El valor ingresado es correcto, muchas gracias.\")\n",
+    "        return num\n",
     "    except(ValueError):\n",
-    "        print(lineas+\"No ingresado un valor inválido vuelva a intentarlo\"+lineas)\n",
-    "        \n",
-    "        return v_rango(mensjae)\n",
+    "        print(\"\"\"\n",
+    "        \\n------------------------------------------------------------------\\n\n",
+    "        Ha ingresado un valor inválido vuelva a intentarlo.\n",
+    "        \\n------------------------------------------------------------------\\n\n",
+    "        \"\"\")\n",
+    "        return v_num_entero(mensaje)\n",
     "    \n",
-    "minimo= 100\n",
-    "maximo= 190\n",
-    "m=\"Por favor ingrese un número entre \"+str(minimo)+\" y \"+str(maximo)+\": \"\n",
+    "m=\"Por favor ingrese su edad en años: \"\n",
     "\n",
-    "valor=v_rango(m, minimo, maximo)\n",
+    "edad=v_num_entero(m)\n",
     "~~~"
    ]
   },
