--- a/Home.ipynb
+++ b/Home.ipynb
@@ -116,6 +116,7 @@
     ">[5.1.1. Métodos de las Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.1_Metodos-de-las-Listas) <!--()-->  \n",
     "[5.1.2. Operaciones](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.2_Operaciones) <!--()-->  \n",
     "[5.1.3. Listas Anidadas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.3_Listas-Anidadas) <!--()-->  \n",
+    "[5.1.4. List Comprenhension](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.4_List-Comprenhension) <!--()-->  \n",
     "#### [5.2. Tuplas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.2_Tuplas) <!--()-->   \n",
     "#### [5.3. Diccionarios](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.3_Diccionarios)    \n",
     "#### [5.4. Conjuntos](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.4_Conjuntos)  "
@@ -182,7 +183,12 @@
     ">[8.1.1. Propiedades Líneas 2D](8_Graficos/8_Graficos.ipynb#8.1.1_Lineas_2D)    \n",
     "[8.1.2. Modificadores de Estílo](8_Graficos/8_Graficos.ipynb#8.1.2_Modificadores-de-Estilo)    \n",
     "[8.1.3. Líneas y Disperción](8_Graficos/8_Graficos.ipynb#8.1.3_Lineas_y_Dispercion)   \n",
-    "[8.1.4. Histograma](8_Graficos/8_Graficos.ipynb#8.1.4_Histograma) "
+    "[8.1.4. Histograma](8_Graficos/8_Graficos.ipynb#8.1.4_Histograma) \n",
+    "\n",
+    "\n",
+    "### [8.2. Gráficos 3D](#8.2_Graficos_3D)\n",
+    ">[8.2.1. Gráfico de Superficies](8_Graficos/8_Graficos.ipynb#8.2.1_Grafico_de_Superficies)    \n",
+    "[8.2.2. Gráfico de Densidad](8_Graficos/8_Graficos.ipynb#8.2.2_Grafico_de_Densidad)   "
    ]
   },
   {
