--- a/3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb
+++ b/3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb
@@ -245,7 +245,7 @@
    "source": [
     "## 3.1.3. Bloque if - elif - else <a id='Min-eje_Bloque-if-elif-else'></a>\n",
     "\n",
-    "No** evalúa condiciones propias, **sólo ejecuta** las instrucciones si no se han cumplido ninguna de las condiciones anteriormente evaluadas con el if o los elif.\n",
+    "**No** evalúa condiciones propias, **sólo ejecuta** las instrucciones si no se han cumplido ninguna de las condiciones anteriormente evaluadas con el if o los elif.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Bloque if - elif - else\n",
