--- a/Home.ipynb
+++ b/Home.ipynb
@@ -55,7 +55,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [2.1 Variables](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.1_Variables)  <!--()-->  \n",
     "#### [2.2 Operadores Aritméticos](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.2_Operadores-Aritmeticos) <!--()-->  \n",
@@ -74,7 +78,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [3.1 Estructuras de Decisión](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.1_Estructuras-de-Decision) <!--()--> \n",
     ">[3.1.1. Bloque if](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#Min-eje_Bloque-if)  <!--()-->   \n",
@@ -92,7 +100,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [4.1. Iterables](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.1_Iterables) <!--()-->   \n",
     "#### [4.2. Estructuras de Repetición](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2_Estructuras-de-Repeticion) <!--()-->  \n",
@@ -110,7 +122,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [5.1. Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1_Listas) <!--()-->   \n",
     ">[5.1.1. Métodos de las Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.1_Metodos-de-las-Listas) <!--()-->  \n",
@@ -131,7 +147,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [6.1. Declaración](6_Funciones/6_Funciones.ipynb#6.1_declaracion)   \n",
     ">[6.1.1. Tipos de Declaración](6_Funciones/6_Funciones.ipynb#6.1.1_tipos-de-Declaracion)  \n",
@@ -155,7 +175,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [7.1. Lectura](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.1_Lectura)   \n",
     ">[7.1.1. Ubicación de Archivos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.1.1_Ubicacion-de-Archivos)    \n",
@@ -177,7 +201,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### [8.1. Gráficos 2D](8_Graficos/8_Graficos.ipynb#8.1_Graficos_2D)\n",
     ">[8.1.1. Propiedades Líneas 2D](8_Graficos/8_Graficos.ipynb#8.1.1_Lineas_2D)    \n",
@@ -186,7 +214,7 @@
     "[8.1.4. Histograma](8_Graficos/8_Graficos.ipynb#8.1.4_Histograma) \n",
     "\n",
     "\n",
-    "### [8.2. Gráficos 3D](#8.2_Graficos_3D)\n",
+    "### [8.2. Gráficos 3D](8_Graficos/8_Graficos.ipynb#8.2_Graficos_3D)\n",
     ">[8.2.1. Gráfico de Superficies](8_Graficos/8_Graficos.ipynb#8.2.1_Grafico_de_Superficies)    \n",
     "[8.2.2. Gráfico de Densidad](8_Graficos/8_Graficos.ipynb#8.2.2_Grafico_de_Densidad)   "
    ]
@@ -200,7 +228,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### [9.1. Módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.1_Modulos)   \n",
     ">[9.1.1. Importar Módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.1.1_Importar-Modulos)      \n",
