--- a/3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb
+++ b/3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb
@@ -42,6 +42,8 @@
    "source": [
     "---\n",
     "\n",
+    "<a id='Decision'></a>\n",
+    "\n",
     "## **3.1 Estructuras de Decisión** <a id='3.1_Estructuras-de-Decision'></a>\n",
     "\n",
     "Son una estructura de control basada en condicionales para tomar decisiones dependiendo del cumplimiento de la o las condiciones establecidas, ya que solo ejecutará las instrucciones indicadas si el resultado de la expresión lógica a la que está sujeta es verdadero.\n",
@@ -282,6 +284,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Operaradores'></a>\n",
+    "\n",
     "## **3.2 Operadores** <a id='3.2_Operaradores'></a>"
    ]
   },
