--- a/Home.ipynb
+++ b/Home.ipynb
@@ -30,10 +30,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [1.1. Presentación](1_Introduccion/1_Introduccion.ipynb#1.1_Presentacion)   \n",
-    "#### [1.2. Instalación](1_Introduccion/1_Introduccion.ipynb#1.2_Instalacion)     \n",
+    "#### [1.1. Presentación](1_Introduccion/1_Introduccion.ipynb#Presentacion)   \n",
+    "#### [1.2. Instalación](1_Introduccion/1_Introduccion.ipynb#Instalacion)     \n",
     "#### [1.3. Algunos IDE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3_Algunos_IDE)  \n",
-    ">[1.3.1. IDLE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3.1_IDLE)   \n",
+    ">[1.3.1. IDLE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#IDLE)   \n",
     "[1.3.2. Jupyter](1_Introduccion/1_3_Algunos_IDE/1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#1.3.2_JupyterLab)   \n",
     "\n",
     "#### [1.4 Instrucciones Guía Interactiva](1_Introduccion/1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb#1.4_Insutrucciones-Guia-Interactiva)   "
@@ -55,18 +55,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### [2.1 Variables](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.1_Variables)  <!--()-->  \n",
-    "#### [2.2 Operadores Aritméticos](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.2_Operadores-Aritmeticos) <!--()-->  \n",
-    "#### [2.3 Ayuda y Directorio](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2.3_Ayuda-y-Directorio) <!--()-->  \n",
+    "#### [2.1 Variables](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#Variables)  <!--()-->  \n",
+    "#### [2.2 Operadores Aritméticos](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#OpAritmeticos) <!--()-->  \n",
+    "#### [2.3 Ayuda y Directorio](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#Ayuda-Directorio) <!--()-->  \n",
     "#### [2.4 Programas en Python](2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2-4_Programas-en-Python) <!--()-->  \n",
-    ">[2.4.1 Análisis del Problema](2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2.4.1_Analsis) <!--()-->  \n",
-    "[2.4.2 Código en Python](2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2.4.2_Codigo-en-Python) <!--()-->  "
+    ">[2.4.1 Análisis del Problema](2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#Analsis) <!--()-->  \n",
+    "[2.4.2 Código en Python](2_Elementos_Basicos/2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#CodigoPython) <!--()-->  "
    ]
   },
   {
@@ -78,17 +74,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### [3.1 Estructuras de Decisión](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.1_Estructuras-de-Decision) <!--()--> \n",
+    "#### [3.1 Estructuras de Decisión](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#Decision) <!--()--> \n",
     ">[3.1.1. Bloque if](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#Min-eje_Bloque-if)  <!--()-->   \n",
     "[3.1.2. Bloque if - else](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#Min-eje_Bloque-if-else)  <!--()-->   \n",
     "[3.1.3. Bloque if - elif - else](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#Min-eje_Bloque-if-elif-else)  <!--()-->   \n",
-    "#### [3.2 Operadores](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.2_Operaradores) <!--()-->"
+    "#### [3.2 Operadores](3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#Operaradores) <!--()-->"
    ]
   },
   {
@@ -100,17 +92,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### [4.1. Iterables](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.1_Iterables) <!--()-->   \n",
-    "#### [4.2. Estructuras de Repetición](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2_Estructuras-de-Repeticion) <!--()-->  \n",
-    ">[4.2.1. Bloque for](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2.1_Bloque-for) <!--()-->  \n",
-    "[4.2.2. Bloque while](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2.2_Bloque-while) <!--()-->  \n",
-    "[4.2.3. Controladores de Bucles](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#4.2.3_Controladores-de-Bucles) <!--()-->  "
+    "#### [4.1. Iterables](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Iterables) <!--()-->   \n",
+    "#### [4.2. Estructuras de Repetición](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Repeticion) <!--()-->  \n",
+    ">[4.2.1. Bloque for](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#BloqueFor) <!--()-->  \n",
+    "[4.2.2. Bloque while](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#BloqueWhile) <!--()-->  \n",
+    "[4.2.3. Controladores de Bucles](4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Controladores) <!--()-->  "
    ]
   },
   {
@@ -122,20 +110,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### [5.1. Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1_Listas) <!--()-->   \n",
-    ">[5.1.1. Métodos de las Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.1_Metodos-de-las-Listas) <!--()-->  \n",
-    "[5.1.2. Operaciones](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.2_Operaciones) <!--()-->  \n",
-    "[5.1.3. Listas Anidadas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.3_Listas-Anidadas) <!--()-->  \n",
-    "[5.1.4. List Comprenhension](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.1.4_List-Comprenhension) <!--()-->  \n",
-    "#### [5.2. Tuplas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.2_Tuplas) <!--()-->   \n",
-    "#### [5.3. Diccionarios](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.3_Diccionarios)    \n",
-    "#### [5.4. Conjuntos](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#5.4_Conjuntos)  "
+    "#### [5.1. Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#CapListas) <!--()-->   \n",
+    ">[5.1.1. Métodos de las Listas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Listas) <!--()-->  \n",
+    "[5.1.2. Operaciones](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Operaciones) <!--()-->  \n",
+    "[5.1.3. Listas Anidadas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Anidadas) <!--()-->  \n",
+    "[5.1.4. List Comprenhension](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Comprenhension) <!--()-->  \n",
+    "#### [5.2. Tuplas](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Tuplas) <!--()-->   \n",
+    "#### [5.3. Diccionarios](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Diccionarios)    \n",
+    "#### [5.4. Conjuntos](5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb#Sets)  "
    ]
   },
   {
@@ -147,23 +131,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "#### [6.1. Declaración](6_Funciones/6_Funciones.ipynb#6.1_declaracion)   \n",
-    ">[6.1.1. Tipos de Declaración](6_Funciones/6_Funciones.ipynb#6.1.1_tipos-de-Declaracion)  \n",
-    "[6.1.2. Función Lambda](6_Funciones/6_Funciones.ipynb#6.1.2_Funcion-Lamda)   \n",
-    "[6.1.3. Documentación](6_Funciones/6_Funciones.ipynb#6.1.3_Documentacion)\n",
-    "#### [6.2. Argumentos](#6.2_Argumentos)  \n",
-    ">[6.2.1. Argumentos Obligatorios](6_Funciones/6_Funciones.ipynb#6.2.1_Argumentos-Obligatorios)  \n",
-    "[6.2.2. Argumentos Opcionales](6_Funciones/6_Funciones.ipynb#6.2.2_Argumentos-Opcionales)\n",
-    "#### [6.3. Funciones Recursivas](6_Funciones/6_Funciones.ipynb#6.3_Funciones-Recursivas)   \n",
-    "#### [6.4. Validaciones](6_Funciones/6_Funciones.ipynb#6.4.2_Validacion_de_Entradas)   \n",
-    ">[6.4.1. Excepciones](6_Funciones/6_Funciones.ipynb#6.4.1_Excepciones)    \n",
-    "[6.4.2. Validación de Entradas](6_Funciones/6_Funciones.ipynb#6.4.2_Validacion_de_Entradas)  "
+    ">[6.1.1. Tipos de Declaración](6_Funciones/6_Funciones.ipynb#TDeclaracion)  \n",
+    "[6.1.2. Función Lambda](6_Funciones/6_Funciones.ipynb#Lambda)   \n",
+    "[6.1.3. Documentación](6_Funciones/6_Funciones.ipynb#Documentacion)\n",
+    "#### [6.2. Argumentos](6_Funciones/6_Funciones.ipynb#Argumentos)  \n",
+    ">[6.2.1. Argumentos Obligatorios](6_Funciones/6_Funciones.ipynb#AObligatorios)  \n",
+    "[6.2.2. Argumentos Opcionales](6_Funciones/6_Funciones.ipynb#AOpcionales)\n",
+    "#### [6.3. Funciones Recursivas](6_Funciones/6_Funciones.ipynb#Recursivas)   \n",
+    "#### [6.4. Validaciones](6_Funciones/6_Funciones.ipynb#Validaciones)   \n",
+    ">[6.4.1. Excepciones](6_Funciones/6_Funciones.ipynb#Excepciones)    \n",
+    "[6.4.2. Validación de Entradas](6_Funciones/6_Funciones.ipynb#Ventradas)  "
    ]
   },
   {
@@ -175,21 +155,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### [7.1. Lectura](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.1_Lectura)   \n",
-    ">[7.1.1. Ubicación de Archivos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.1.1_Ubicacion-de-Archivos)    \n",
-    "[7.1.2. Almacenar Datos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.1.2_Almacenar-Datas)   \n",
-    "#### [7.2. Escritura](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.2_Escritura)    \n",
-    ">[7.2.1. Crear Carpetas](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.2.1_Crear-Carpetas)\n",
-    "#### [7.3. Crear Archivos .xlsx](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.3_Archivos-xlsx)  \n",
-    ">[7.3.1. Crear los DataFrames](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.3.1_Crear-los-DataFrames)    \n",
-    "[7.3.2. Crear y Editar el Documento](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.3.2_Crear-y-Editar-el-Documento)     \n",
-    "[7.3.3. Aplicar Títulos y Formatos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7.3.3_Aplicar-Títulos-y-Formatos)  "
+    "#### [7.1. Lectura](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Lectura)   \n",
+    ">[7.1.1. Ubicación de Archivos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Ubicacion)    \n",
+    "[7.1.2. Almacenar Datos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Almacenar)   \n",
+    "#### [7.2. Escritura](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Escritura)    \n",
+    ">[7.2.1. Crear Carpetas](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Carpetas)\n",
+    "#### [7.3. Crear Archivos .xlsx](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#xlsx)  \n",
+    ">[7.3.1. Crear los DataFrames](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#DataFrames)    \n",
+    "[7.3.2. Crear y Editar el Documento](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#CrearEditar)     \n",
+    "[7.3.3. Aplicar Títulos y Formatos](7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#Formatos)  "
    ]
   },
   {
@@ -201,22 +177,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "### [8.1. Gráficos 2D](8_Graficos/8_Graficos.ipynb#8.1_Graficos_2D)\n",
-    ">[8.1.1. Propiedades Líneas 2D](8_Graficos/8_Graficos.ipynb#8.1.1_Lineas_2D)    \n",
-    "[8.1.2. Modificadores de Estílo](8_Graficos/8_Graficos.ipynb#8.1.2_Modificadores-de-Estilo)    \n",
-    "[8.1.3. Líneas y Disperción](8_Graficos/8_Graficos.ipynb#8.1.3_Lineas_y_Dispercion)   \n",
-    "[8.1.4. Histograma](8_Graficos/8_Graficos.ipynb#8.1.4_Histograma) \n",
+    "### [8.1. Gráficos 2D](8_Graficos/8_Graficos.ipynb#2D)\n",
+    ">[8.1.1. Propiedades Líneas 2D](8_Graficos/8_Graficos.ipynb#L2D)    \n",
+    "[8.1.2. Modificadores de Estílo](8_Graficos/8_Graficos.ipynb#Modificadores)    \n",
+    "[8.1.3. Líneas y Disperción](8_Graficos/8_Graficos.ipynb#LDispercion)   \n",
+    "[8.1.4. Histograma](8_Graficos/8_Graficos.ipynb#Histograma)\n",
     "\n",
     "\n",
-    "### [8.2. Gráficos 3D](8_Graficos/8_Graficos.ipynb#8.2_Graficos_3D)\n",
-    ">[8.2.1. Gráfico de Superficies](8_Graficos/8_Graficos.ipynb#8.2.1_Grafico_de_Superficies)    \n",
-    "[8.2.2. Gráfico de Densidad](8_Graficos/8_Graficos.ipynb#8.2.2_Grafico_de_Densidad)   "
+    "### [8.2. Gráficos 3D](8_Graficos/8_Graficos.ipynb#Graficos3D)\n",
+    ">[8.2.1. Gráfico de Superficies](8_Graficos/8_Graficos.ipynb#Superficies)    \n",
+    "[8.2.2. Gráfico de Densidad](8_Graficos/8_Graficos.ipynb#Densidad)   "
    ]
   },
   {
@@ -228,23 +200,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### [9.1. Módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.1_Modulos)   \n",
-    ">[9.1.1. Importar Módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.1.1_Importar-Modulos)      \n",
+    "#### [9.1. Módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#Modulos)   \n",
+    ">[9.1.1. Importar Módulos](9_Modulos/9_Modulos_y_Paquetes.ipynb#Importar)      \n",
     "\n",
-    "#### [9.2. Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.2_Paquetes)   \n",
-    ">[9.2.1. Importar Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.2.1_Importar-Paquetes)     \n",
+    "#### [9.2. Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#Paquetes)   \n",
+    ">[9.2.1. Importar Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#IPaquetes)     \n",
     "\n",
-    "#### [9.3. Librería Estándar](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.3_Libreria-Estandar)  \n",
+    "#### [9.3. Librería Estándar](9_Modulos/9_Modulos_y_Paquetes.ipynb#LEstandar)  \n",
     "\n",
-    "#### [9.4. Paquetes de Terceros](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4_Paqutes-de-Terceros)   \n",
-    ">[9.4.1. Instalación de Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.1_Instalacion-de-Paquetes)   \n",
-    "[9.4.2. Instalación de pip](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.2_Instalacion_de_pip)   "
+    "#### [9.4. Paquetes de Terceros](9_Modulos/9_Modulos_y_Paquetes.ipynb#PTerceros)   \n",
+    ">[9.4.1. Instalación de Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#InstalPaquetes)   \n",
+    "[9.4.2. Paquetes de SciPy](9_Modulos/9_Modulos_y_Paquetes.ipynb#SciPy)  "
    ]
   },
   {
